@@ -4,10 +4,7 @@ package it.interno.ai.service;
 import it.interno.ai.model.*;
 import it.interno.ai.tools.GeneratorTools;
 import it.interno.ai.utils.ContextFilter;
-import org.apache.poi.ss.usermodel.Cell;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -17,6 +14,7 @@ import org.springframework.ai.document.Document;
 import org.springframework.ai.reader.pdf.PagePdfDocumentReader;
 import org.springframework.ai.transformer.splitter.TokenTextSplitter;
 import org.springframework.ai.vectorstore.SearchRequest;
+
 import org.springframework.ai.vectorstore.elasticsearch.ElasticsearchVectorStore;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
@@ -25,6 +23,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 
 import static it.interno.ai.utils.BeanToDocumentConverter.convertToDocumentList;
@@ -96,60 +95,142 @@ public class PPEDocumentService {
     }
 
 
-    public List<Utente>  readExcelFile2(Resource resource) throws IOException {
+    public List<Utente> readExcelFile2(Resource resource) throws IOException {
         List<Utente> results = new ArrayList<>();
-
+        log.info("Iniziando la lettura del file Excel: {}", resource.getFilename());
 
         try (InputStream inputStream = resource.getInputStream();
              Workbook workbook = new XSSFWorkbook(inputStream)) {
 
             Sheet sheet = workbook.getSheetAt(0);
+            int totalRows = 0;
+            int processedRows = 0;
+
             for (Row row : sheet) {
+                totalRows++;
                 if (row.getRowNum() == 0) continue; // Skip header row
-                Metadata metadata = new Metadata();
-                metadata.setFileType("xlsx");
-                metadata.setSource(resource.getFilename());
-                metadata.setIndexedAt(new java.util.Date());
-                metadata.setRowCount(row.getRowNum());
 
-
-
-                Utente ppe = new Utente();
-                ppe.setMetadata(metadata);
-                ppe.setIdUtente(row.getCell(0).getStringCellValue());
-                ppe.setCognomeUtente(row.getCell(1).getStringCellValue());
-                ppe.setNomeUtente(row.getCell(2).getStringCellValue());
-                Ufficio ufficio = new Ufficio();
-                ppe.setUfficio(ufficio);
-                ppe.getUfficio().setIdUfficio(row.getCell(3).getStringCellValue());
-                ppe.getUfficio().setDescrizioneUfficio(row.getCell(4).getStringCellValue());
-                Richiesta richiesta = new Richiesta();
-                ppe.setRichiesta(richiesta);
-                ppe.getRichiesta().setDataRichiesta(dateFormat.format(row.getCell(5).getDateCellValue()));
-                ppe.getRichiesta().setOraRichiesta(row.getCell(6).getStringCellValue());
-                Comandante comandante = new Comandante();
-                ppe.setComandante(comandante);
-                ppe.getComandante().setIdComandante(row.getCell(7).getStringCellValue());
-                ppe.getComandante().setCognomeComandante(row.getCell(8).getStringCellValue());
-                ppe.getComandante().setNomeComandante(row.getCell(9).getStringCellValue());
-                Applicazione applicazione = new Applicazione();
-                ppe.setApplicazione(applicazione);
-                ppe.getApplicazione().setApplicazioneWeb(row.getCell(10).getStringCellValue());
-                ppe.getApplicazione().setApplicazioneChiamante(row.getCell(11).getStringCellValue());
-                ppe.setSoggettoControllato(row.getCell(12).getNumericCellValue() + "");
-                Motivazione motivazione = new Motivazione();
-                ppe.setMotivazione(motivazione);
-                ppe.getMotivazione().setMotivazione(row.getCell(13).getStringCellValue());
-                ppe.getMotivazione().setMotivazioneEstesa(row.getCell(14).getStringCellValue());
-
-                ppe.setRuolo(row.getCell(15).getStringCellValue());
-                ppe.setEnteDiAppartenenza(row.getCell(16).getStringCellValue());
-                results.add(ppe);
+                try {
+                    Utente ppe = processExcelRow(row, resource.getFilename());
+                    results.add(ppe);
+                    processedRows++;
+                } catch (Exception e) {
+                    log.warn("Errore durante l'elaborazione della riga {}: {}", row.getRowNum(), e.getMessage());
+                }
             }
 
+            log.info("Lettura Excel completata. Processate {} righe su {} totali", processedRows, totalRows - 1);
         }
 
-       return results;
+        return results;
+    }
+
+    /**
+     * Processa una singola riga Excel e crea un oggetto Utente
+     *
+     * @param row La riga Excel da processare
+     * @param filename Il nome del file Excel
+     * @return Oggetto Utente popolato con i dati della riga
+     */
+    private Utente processExcelRow(Row row, String filename) {
+        // Creazione e configurazione dei metadati
+        Metadata metadata = new Metadata();
+        metadata.setFileType("xlsx");
+        metadata.setSource(filename);
+        metadata.setIndexedAt(new java.util.Date());
+        metadata.setRowCount(row.getRowNum());
+
+        // Creazione dell'utente e impostazione dei dati base
+        Utente ppe = new Utente();
+        ppe.setMetadata(metadata);
+        ppe.setIdUtente(getCellStringValue(row, 0));
+        ppe.setCognomeUtente(getCellStringValue(row, 1));
+        ppe.setNomeUtente(getCellStringValue(row, 2));
+
+        // Configurazione dell'ufficio
+        Ufficio ufficio = new Ufficio();
+        ufficio.setIdUfficio(getCellStringValue(row, 3));
+        ufficio.setDescrizioneUfficio(getCellStringValue(row, 4));
+        ppe.setUfficio(ufficio);
+
+        // Configurazione della richiesta
+        Richiesta richiesta = new Richiesta();
+        richiesta.setDataRichiesta(formatDateCell(row, 5));
+        richiesta.setOraRichiesta(getCellStringValue(row, 6));
+        ppe.setRichiesta(richiesta);
+
+        // Configurazione del comandante
+        Comandante comandante = new Comandante();
+        comandante.setIdComandante(getCellStringValue(row, 7));
+        comandante.setCognomeComandante(getCellStringValue(row, 8));
+        comandante.setNomeComandante(getCellStringValue(row, 9));
+        ppe.setComandante(comandante);
+
+        // Configurazione dell'applicazione
+        Applicazione applicazione = new Applicazione();
+        applicazione.setApplicazioneWeb(getCellStringValue(row, 10));
+        applicazione.setApplicazioneChiamante(getCellStringValue(row, 11));
+        ppe.setApplicazione(applicazione);
+
+        // Impostazione del soggetto controllato
+        ppe.setSoggettoControllato(getCellNumericValue(row, 12));
+
+        // Configurazione della motivazione
+        Motivazione motivazione = new Motivazione();
+        motivazione.setMotivazione(getCellStringValue(row, 13));
+        motivazione.setMotivazioneEstesa(getCellStringValue(row, 14));
+        ppe.setMotivazione(motivazione);
+
+        // Impostazione di ruolo ed ente
+        ppe.setRuolo(getCellStringValue(row, 15));
+        ppe.setEnteDiAppartenenza(getCellStringValue(row, 16));
+
+        return ppe;
+    }
+
+    /**
+     * Ottiene il valore di una cella come stringa con gestione degli errori
+     */
+    private String getCellStringValue(Row row, int cellIndex) {
+        Cell cell = row.getCell(cellIndex);
+        if (cell == null) return "";
+
+        try {
+            return cell.getStringCellValue();
+        } catch (Exception e) {
+            // Fallback per celle non di tipo stringa
+            return cell.toString();
+        }
+    }
+
+    /**
+     * Ottiene il valore numerico di una cella come stringa con gestione degli errori
+     */
+    private String getCellNumericValue(Row row, int cellIndex) {
+        Cell cell = row.getCell(cellIndex);
+        if (cell == null) return "0";
+
+        try {
+            return String.valueOf(cell.getNumericCellValue());
+        } catch (Exception e) {
+            // Fallback per celle non numeriche
+            return cell.toString();
+        }
+    }
+
+    /**
+     * Formatta una cella data secondo il formato specificato
+     */
+    private String formatDateCell(Row row, int cellIndex) {
+        Cell cell = row.getCell(cellIndex);
+        if (cell == null) return "";
+
+        try {
+            return dateFormat.format(cell.getDateCellValue());
+        } catch (Exception e) {
+            // Fallback per celle non di tipo data
+            return cell.toString();
+        }
     }
 
 
@@ -250,10 +331,8 @@ public class PPEDocumentService {
                 
                 """;
 
-        String prompt2 = """
-                "Fornisci una risposta in una struttura HTML dettagliata alla domanda seguente, organizzando il testo in paragrafi distinti e numerati.Rispondi alla domanda utilizzando le informazioni fornite nel contesto.
-                Ogni paragrafo deve essere separato da una riga vuota.
-                Concludi la riposta facendo un riepilogo dei punti e fornisci conclusioni finali.
+        String prompt2 = """ 
+                Fornisci una risposta strutturata e dettagliata alla domanda dell'utente, basandoti esclusivamente sulle informazioni presenti nel contesto fornito.
                 
                 Contesto:
                 -----------
@@ -265,29 +344,42 @@ public class PPEDocumentService {
                 {question}
                 -----------
                 
-                Istruzioni:
-                1. Analizza attentamente il contesto fornito e identifica le informazioni più rilevanti.
-                2. Organizza e riassumi i dati  presenti nel contesto.
-                3. Fornisci una risposta dettagliata, facendo riferimento alle informazioni estratte dal contesto.
-                4. Se alcune informazioni non sono chiare o mancanti, specifica eventuali incertezze o richiedi ulteriori dettagli.
-                5. Rispondi in modo chiaro, strutturato e in italiano.
+                Istruzioni per la risposta:
+                1. Analizza attentamente il contesto e identifica tutte le informazioni pertinenti alla domanda.
+                2. Organizza la risposta in sezioni ben definite secondo la struttura indicata sotto.
+                3. Utilizza un linguaggio chiaro, professionale e in italiano.
+                4. Evidenzia eventuali informazioni mancanti o ambigue nel contesto.
+                5. Includi tutti i metadati disponibili nella sezione dedicata.
                 
-                Struttura della risposta suddivisa in paragrafi:
+                Struttura della risposta (mantieni questa organizzazione precisa):
                 
-                Dati utente
-                
-                Dati Comandante
-                
-                Dati Applicazione
-                
-                Dati Ufficio
-                
-                Dati Richiesta
-                
-                Dati Motivazione
-                
-                Metadati
-               """;
+                <div class="risposta-container">
+                  <h2>Informazioni Utente</h2>
+                  <p>[Inserisci qui tutti i dati relativi all'utente: ID, nome, cognome, ruolo, ente di appartenenza]</p>
+                  
+                  <h2>Informazioni Comandante</h2>
+                  <p>[Inserisci qui tutti i dati relativi al comandante: ID, nome, cognome]</p>
+                  
+                  <h2>Informazioni Applicazione</h2>
+                  <p>[Inserisci qui tutti i dati relativi all'applicazione: applicazione web, applicazione chiamante]</p>
+                  
+                  <h2>Informazioni Ufficio</h2>
+                  <p>[Inserisci qui tutti i dati relativi all'ufficio: ID, descrizione]</p>
+                  
+                  <h2>Informazioni Richiesta</h2>
+                  <p>[Inserisci qui tutti i dati relativi alla richiesta: data, ora]</p>
+                  
+                  <h2>Informazioni Motivazione</h2>
+                  <p>[Inserisci qui tutti i dati relativi alla motivazione: motivazione, motivazione estesa]</p>
+                  
+                  <h2>Metadati</h2>
+                  <p>[Inserisci qui tutti i metadati disponibili: tipo file, fonte, data indicizzazione, ecc.]</p>
+                  
+                  <h2>Riepilogo</h2>
+                  <p>[Fornisci un riepilogo conciso delle informazioni principali e eventuali conclusioni]</p>
+                </div>
+                """;
+
 
 
 
@@ -323,22 +415,60 @@ public class PPEDocumentService {
 
        // return response;
 
-        if(vectorStoreResult!=null && vectorStoreResult.get(0)!=null &&
-                vectorStoreResult.getFirst().getMetadata()!=null &&
-                vectorStoreResult.get(0).getMetadata().get(PagePdfDocumentReader.METADATA_START_PAGE_NUMBER)!=null){
-            return response +
-                    System.lineSeparator() +
-                    "Trovato alla pagina: " +
-                    // Retrieving the first ranked page number from the document metadata
-                     vectorStoreResult.getFirst().getMetadata().get(PagePdfDocumentReader.METADATA_START_PAGE_NUMBER) +
-                    " del manuale " + vectorStoreResult.getFirst().getMetadata().get(PagePdfDocumentReader.METADATA_FILE_NAME);
-        }else{
+        // Check if we have document metadata to enhance the response
+        if (hasPdfMetadata(vectorStoreResult)) {
+        // Handle PDF document metadata
+        Document firstDocument = vectorStoreResult.getFirst();
+        String pageNumber = firstDocument.getMetadata().get(PagePdfDocumentReader.METADATA_START_PAGE_NUMBER).toString();
+        String fileName = firstDocument.getMetadata().get(PagePdfDocumentReader.METADATA_FILE_NAME).toString();
+
+        return response +
+               System.lineSeparator() +
+               String.format("Trovato alla pagina: %s del manuale %s", pageNumber, fileName);
+        } else if (hasExcelMetadata(vectorStoreResult)) {
+        // Handle Excel document metadata
+        Document firstDocument = vectorStoreResult.getFirst();
+        String fileName = firstDocument.getMetadata().getOrDefault("source", "documento Excel").toString();
+        String rowNumber = firstDocument.getMetadata().getOrDefault("rowCount", "").toString();
+
+        String additionalInfo = !rowNumber.isEmpty() ?
+        String.format(" (riga %s)", rowNumber) : "";
+
+        return response +
+               System.lineSeparator() +
+               String.format("Informazione trovata nel file: %s%s", fileName, additionalInfo);
+        } else {
             return response;
         }
-
-
     }
 
+    /**
+     * Checks if the vector store result contains PDF metadata with page information
+     *
+     * @param documents List of documents from vector store search
+     * @return true if PDF page metadata is available
+     */
+    private boolean hasPdfMetadata(List<Document> documents) {
+        return documents != null &&
+               !documents.isEmpty() &&
+               documents.getFirst().getMetadata() != null &&
+               documents.getFirst().getMetadata().containsKey(PagePdfDocumentReader.METADATA_START_PAGE_NUMBER) &&
+               documents.getFirst().getMetadata().containsKey(PagePdfDocumentReader.METADATA_FILE_NAME);
+    }
+
+    /**
+     * Checks if the vector store result contains Excel metadata
+     *
+     * @param documents List of documents from vector store search
+     * @return true if Excel metadata is available
+     */
+    private boolean hasExcelMetadata(List<Document> documents) {
+        return documents != null &&
+               !documents.isEmpty() &&
+               documents.getFirst().getMetadata() != null &&
+               documents.getFirst().getMetadata().containsKey("fileType") &&
+               "xlsx".equals(documents.getFirst().getMetadata().get("fileType"));
+    }
 
 
 }
